--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.apache.activemq:activemq-client:5.17.1'
+    implementation "org.slf4j:slf4j-api:1.7.5"
+	implementation "org.slf4j:slf4j-log4j12:1.7.5"
 }
 
 application {
