--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
 repositories {
@@ -23,6 +24,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.apache.activemq:activemq-client:5.17.1'
+    implementation 'info.picocli:picocli:4.6.3'
     implementation "org.slf4j:slf4j-api:1.7.5"
 	implementation "org.slf4j:slf4j-log4j12:1.7.5"
 }
